external-crates/move/crates/move-compiler/tests/move_2024/borrows/freeze_field_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E07002]: mutable ownership violated
   ┌─ tests/move_2024/borrows/freeze_field_invalid.move:12:9
   │
11 │         let f = &mut s.f;
   │                 -------- Field 'f' is still being mutably borrowed by this reference
12 │         freeze(s);
   │         ^^^^^^^^^ Invalid freeze.

error[E07002]: mutable ownership violated
   ┌─ tests/move_2024/borrows/freeze_field_invalid.move:19:9
   │
18 │         let g = &mut s.f;
   │                 -------- Field 'f' is still being mutably borrowed by this reference
19 │         freeze(s);
   │         ^^^^^^^^^ Invalid freeze.
